--- a/_posts/2022-12-26-고전-문제를-통해-알아보는-자바스크립트-원리.md
+++ b/_posts/2022-12-26-고전-문제를-통해-알아보는-자바스크립트-원리.md
@@ -45,7 +45,7 @@ func();
 왜 제가 생각했던대로 동작하지 않는지에 대해 먼저 말씀드리자면, 변수(var)의 스코프 문제와 비동기(setTimeout)가 합쳐져 환장의 조합이 탄생했기 때문입니다.
 
 var로 선언한 변수의 특성과 비동기를 잠깐 짚고 넘어가자면 var로 선언했을 경우 재할당, 재선언이 가능해지고, 변수의 범위는 **함수 스코프**를 가지게됩니다.  
-**비동기**는 말이 어려울 수도 있기 때문에 풀어서 써보자면, "나 대신 이것 좀 실행시켜 줘"라고 할 수 있겠습니다.
+**비동기**는 말이 어려울 수도 있기 때문에 풀어서 써보자면, "나 다른 일 하고 올테니깐 다음 라인 실행시켜 줘."라고 할 수 있겠습니다.
 
 제가 설명한 것 중에 **굵은 글씨**를 다시 봐주시기 바랍니다.  
 왜 이러한 현상이 발생했는지 또 이 문제를 어떻게 해결해야하는지는 **굵은 글씨**에 달려있습니다. 차근차근 가봅시다.
@@ -215,5 +215,4 @@ func();
 2. 해당 문제는 let이 나오기 이전에 발생했던 고전 문제로 알고있다(최소 10년).  
    그렇기 때문에 당연히 IIFE를 통해 해결할 수 밖에 없었고, 이는 스코프를 한 단계 더 생성한 클로저 환경을 만들었기 때문에 클로저 문제라고 할 수 있다(해당 문제는 더 이상 IIFE로 해결하지 않음).
 
-제 개인적인 의견으로는 이제는 충분히 블록 스코프로 만들어 해결이 가능하기 때문에 더 이상 해당 문제는 클로저 문제라고 보기는 어려워 보입니다.  
-다음에는 해당 문제를 변형해서 클로저의 원리를 잘못이해했기 때문에 발생하는 문제에 대해 알아보도록 하겠습니다.
+제 개인적인 의견으로는 이제는 충분히 블록 스코프로 만들어 해결이 가능하기 때문에 더 이상 해당 문제는 클로저 문제라고 보기는 어려워 보입니다.
