--- a/_posts/2022-12-26-고전-문제를-통해-알아보는-자바스크립트-원리.md
+++ b/_posts/2022-12-26-고전-문제를-통해-알아보는-자바스크립트-원리.md
@@ -9,7 +9,7 @@ render_with_liquid: false
 
 ## 시작하기 전에
 
-**"해당 포스팅은 자바스크립트의 원리를 재밌게 알아보기 위해 제가 생각한 설명이 포함되어 틀릴 수 있다는 점 알려드립니다. 나중에 댓글 기능이 생기면 댓글로 알려주셔도 정말 좋겠지만, 지금은 메일로 알려주시면 정말 감사하겠습니다."**
+> "해당 포스팅은 자바스크립트의 원리를 재밌게 알아보기 위해 제가 생각한 설명이 포함되어 틀릴 수 있다는 점 알려드립니다. 나중에 댓글 기능이 생기면 댓글로 알려주셔도 정말 좋겠지만, 지금은 메일로 알려주시면 정말 감사하겠습니다."
 
 ## 시작 지점
 
