--- a/_posts/2023-02-15-chatGpt를-활용한-테스트코드-작성.md
+++ b/_posts/2023-02-15-chatGpt를-활용한-테스트코드-작성.md
@@ -70,7 +70,10 @@ describe("groupAnagrams", () => {
 그런데 몇 번 틀리는 것을 보니 chatGpt의 표본이 결국 구글에서 검색되는 많은 자료들이 아닐까 싶다.
 
 이걸 보면서 인터넷에 얼마나 많은 오류들이 떠돌아 다니는지 새삼 다시 깨닫게 되었다.  
-그래도 나는 블로그에 오류를 작성하는 사람들을 비판할 생각도 없을 뿐더러,  
+그래도 나는 이러한 오류를 작성하는 사람들을 비판할 생각도 없을 뿐더러,  
 **틀릴 수 있다는 공포**를 이겨내고 블로그를 작성해서 남들에게 자신의 자료를 공개하는 분들에게 존경심을 표한다.
 
-또한, 그러한 방대한 자료들, 오류들이 없었으면 chatGpt도 없었겠지.
+또한, 그러한 방대한 자료, 오류들이 없었으면 chatGpt도 없었겠지.
+
+칭찬 또한 잊지 말고 해주자!
+![praise](/assets/img/testcode-chatGpt/praise.png){:style='border:1px solid #eaeaea; border-radius: 7px; padding: 0px;' }
